tests/sealed_objects/sealed_objects.exp
Error ------------------------------------------------------------- test.js:2:21

Error: test.js:2
  2: var s1: string = o1.y; // error
                         ^ Cannot get `o1.y` because property `y` is missing in object literal [1].
  References:
    1: var o1 = { x: 0 };
                ^^^^^^^^ [1]: object literal

Error ------------------------------------------------------------- test.js:7:39

Error: test.js:7
  7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot assign object literal to `o3` because property `y` is missing in object type [1] but exists in object type [2].
  References:
    7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
                                                             ^^^^^^^^^^^^^^ [1]: object type
    7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
               ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]: object type

Error ------------------------------------------------------------ test.js:19:76

Error: test.js:19
 19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                                                                ^^^^^^ Cannot assign object literal to `o7` because in property `y`, number [1] is incompatible with string [2].
  References:
   19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                                                                  ^^^^^^ [1]: number
   19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                ^^^^^^ [2]: string


Found 3 errors
